--- a/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/html/gt_html_xpage.html
@@ -10,7 +10,17 @@
 		<form class='form-horizontal' action='jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}' method="post" role="form">
 			<fieldset>
 				<legend>${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.title${i18n_close}</legend>
-				<${macro}messages errors=errors />
+				<#-- Error messages handling -->
+			    <#if errors??>
+			        <#if errors?size &gt; 0 >
+			            <div class="${errors_class}" id="messages_errors_div">
+			                <a class="close" data-dismiss="alert" href="#">x</a>
+			                <#list errors as error >
+			                    <i class="fa fa-exclamation-circle"></i> ${error.message} <br>
+			                </#list>
+			            </div>
+			        </#if>
+			    </#if>
 				<input type="hidden" id="id" name="id"/>
 				<input type="hidden" value="${bra_open}token${bra_close}" name="token" />
 
@@ -20,15 +30,18 @@
          				${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}
          					<i class="fa fa-asterisk" aria-hidden="true"></i>
          				</label>
-						<#if attribute.type != "boolean">
-						<input type="text" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index + 1}" />
-						<#else>
-						<input type="checkbox" id="${attribute.paramName}" name="${attribute.paramName}" value="1" checked=${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!'false' tabIndex='${attribute_index}' />
-						</#if>
+         				<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
+							<#if attribute.type != "boolean">
+							<input type="text" class="form-control" id="${attribute.paramName}" name="${attribute.paramName}" value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> tabIndex="${attribute_index + 1}" />
+							<#else>
+							<input type="checkbox" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value="1"  ${"<#if ${business_class.businessClass?lower_case}.${attribute.name?uncap_first}=true>checked='checked'</#if>"} tabIndex='${attribute_index}' />
+							</#if>
+							<span class="help-block" id="${attribute.paramName}_help">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
+						</div>
 					</div>
 				</#list>
 				<div class="form-group">
-        			<div class=col-xs-12 col-sm-offset-3 col-sm-6">
+        			<div class="col-xs-12 col-sm-offset-3 col-sm-6">
           				<button class="btn btn-primary btn-flat" name='action_create${business_class.businessClass}' type='submit' title='${i18n_open}portal.util.labelCreate${i18n_close}'>
           					<i class="fa fa-close" aria-hidden="true"></i>
           				${i18n_open}portal.util.labelCreate${i18n_close}
@@ -54,27 +67,40 @@
 		<form class='form-horizontal' action='jsp/site/Portal.jsp?page=${business_class.businessClass?lower_case}' method="post" role="form">
 			<fieldset>
 				<legend>${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.title${i18n_close}</legend>
-				<${macro}messages errors=errors />
+				<#-- Error messages handling -->
+			    <#if errors??>
+			        <#if errors?size &gt; 0 >
+			            <div class="${errors_class}" id="messages_errors_div">
+			                <a class="close" data-dismiss="alert" href="#">x</a>
+			                <#list errors as error >
+			                    <i class="fa fa-exclamation-circle"></i> ${error.message} <br>
+			                </#list>
+			            </div>
+			        </#if>
+			    </#if>
 				<input type="hidden" id="id" name="id" value="${bra_open}${business_class.businessClass?lower_case}.id${bra_close}"/>
 				<input type="hidden" value="${bra_open}token${bra_close}" name="token" />
 
 				<#list business_class.attributes as attribute>
 				<div class="form-group">
 					<label for='${attribute.paramName}' class="col-xs-12 col-sm-3 control-label">
-	         			<i class="fa fa-asterisk" aria-hidden="true"></i>
 	         			${i18n_open}${plugin_name}.modify_${business_class.businessClass?lower_case}.label${attribute.name}${i18n_close}
+	         			<i class="fa fa-asterisk" aria-hidden="true"></i>
 	         		</label>
-					<#if attribute.type != "boolean">
-	          		<input type="text" id='${attribute.paramName}' name='${attribute.paramName}' <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value='${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!\'\'${bra_close}' tabIndex='${attribute_index}' />
-					<#else>
-					<input type="checkbox" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value="1" checked=${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!'false' tabIndex='${attribute_index}' />
-				    </#if>
+	         		<div class="col-xs-12 col-sm-9 col-md-6 col-lg-6">
+						<#if attribute.type != "boolean">
+		          		<input type="text" class="form-control" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value="${bra_open}${business_class.businessClass?lower_case}.${attribute.name?uncap_first}!''${bra_close}" tabIndex='${attribute_index}' />
+						<#else>
+						<input type="checkbox" id="${attribute.paramName}" name="${attribute.paramName}" <#if attribute.maxLength &gt; 0> maxlength=${attribute.maxLength}</#if> value="1"  ${"<#if ${business_class.businessClass?lower_case}.${attribute.name?uncap_first}=true>checked='checked'</#if>"} tabIndex='${attribute_index}' />
+					    </#if>
+					    <span class="help-block" id="${attribute.paramName}_help">${i18n_open}${plugin_name}.create_${business_class.businessClass?lower_case}.label${attribute.name}.help${i18n_close}</span>
+					</div>
 				</div>
 				</#list>
 				<div class="form-group">
 		          <button class="btn btn-primary btn-flat" name='action_modify${business_class.businessClass}' type='submit' tabIndex='${business_class.attributes?size}' title='${i18n_open}portal.util.labelModify${i18n_close}'>
 		          	<i class="fa fa-close" aria-hidden="true"></i>
-		          ${i18n_open}portal.util.labelModify${i18n_close}
+		          	${i18n_open}portal.util.labelModify${i18n_close}
 		          </button>
 		          <button class="btn btn-btn-secondary btn-flat" name='view_manage${business_class.businessClass}s' type='submit' title='${i18n_open}portal.util.labelCancel${i18n_close}'>
 		          	<i class="fa fa-close" aria-hidden="true"></i>
