--- a/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
+++ b/webapp/WEB-INF/templates/generators/default/xpage/gt_xpage.html
@@ -50,7 +50,6 @@ import fr.paris.lutece.plugins.${radicalPackage}.business.${business_class.busin
 import fr.paris.lutece.plugins.${radicalPackage}.business.${business_class.businessClass?cap_first}Home;
 import fr.paris.lutece.portal.util.mvc.commons.annotations.Action;
 import fr.paris.lutece.portal.web.xpages.XPage;
-import fr.paris.lutece.portal.web.l10n.LocaleService;
 import fr.paris.lutece.portal.util.mvc.xpage.MVCApplication;
 import fr.paris.lutece.portal.util.mvc.commons.annotations.View;
 import fr.paris.lutece.portal.util.mvc.xpage.annotations.Controller;
@@ -147,7 +146,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     @Action( ACTION_CREATE_${business_class.businessClass?upper_case} )
     public XPage doCreate${business_class.businessClass?cap_first}( HttpServletRequest request ) throws AccessDeniedException
     {
-        populate( _${business_class.businessClass?lower_case}, request, LocaleService.getContextUserLocale( request ) );
+        populate( _${business_class.businessClass?lower_case}, request, getLocale( request ) );
 
         if ( !SecurityTokenService.getInstance( ).validate( request, ACTION_CREATE_${business_class.businessClass?upper_case} ) )
         {
@@ -235,7 +234,7 @@ public class ${business_class.businessClass}XPage extends MVCApplication
     @Action( ACTION_MODIFY_${business_class.businessClass?upper_case} )
     public XPage doModify${business_class.businessClass?cap_first}( HttpServletRequest request ) throws AccessDeniedException
     {
-        populate( _${business_class.businessClass?lower_case}, request, LocaleService.getContextUserLocale( request ) );
+        populate( _${business_class.businessClass?lower_case}, request, getLocale( request ) );
 
         if ( !SecurityTokenService.getInstance( ).validate( request, ACTION_MODIFY_${business_class.businessClass?upper_case} ) )
         {
