--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -88,7 +88,8 @@
 							<#list attributes_list as attribute>
 							<tr>
 								<td>${attribute.attributeName}</td>
-								<td>${attribute.typeDescription}</td>
+								<td>#i18n{pluginwizard.pluginwizard_attributes_types.${attribute.attributeTypeId}.description}
+								</td>
 								<td>
 									<#if attribute.notNull>
 									<span class="label"><i class="glyphicon glyphicon-ok"></span>
