--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -52,7 +52,7 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_provider" value="" />
+									 <input class="form-control" type="text" name="plugin_provider" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProvider}"/>
 								</div>
 							</div>
 
@@ -66,14 +66,14 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_copyright" value="Copyright (c) 2016 Your Company" />
+                                                                    <input class="form-control" type="text" name="plugin_copyright" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginCopyright} " />
 								</div>  
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_provider_url"  value="http://your.web.site.com"  /> 
+									 <input class="form-control" type="text" name="plugin_provider_url"  value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProviderUrl}" /> 
 								</div>              
 							</div>
 
