--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_business_class.html
@@ -29,6 +29,7 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_business_class.labelBusinessClass} *:</label>      
 								<div class="col-md-9">
 									<input class="form-control input-md" type="text" name="business_class" value="${business_class.businessClass}" size="30" />      
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_business_class.help}</span> 
 								</div>  
 							</div>
 
@@ -36,6 +37,7 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_business_class.labelBusinessTableName} *: </label>      
 								<div class="col-md-9">  
 									 <input class="form-control input-md" type="text" name="business_table_name" value="${business_class.businessTableName}" size="30" />      
+									 <span class="help-block">#i18n{pluginwizard.pluginwizard_business_class_table.help}</span> 
 								</div>                       
 							</div>
 
