--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -46,13 +46,15 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
 								<div class="col-md-9">
 									 <input class="form-control" type="text" name="plugin_description" value="" />
+									 <span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_description.help}</span>
 								</div>
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_provider" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProvider}"/>
+									<input class="form-control" type="text" name="plugin_provider" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProvider}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_provider.help}</span>
 								</div>
 							</div>
 
@@ -60,20 +62,23 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
 								<div class="col-md-9">
 									 <input class="form-control" type="text" name="plugin_version"  value="${plugin_version_number}" />
+									 <span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_version.help}</span>
 								</div>                                                                              
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
 								<div class="col-md-9">
-                                                                    <input class="form-control" type="text" name="plugin_copyright" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginCopyright} " />
+                                    <input class="form-control" type="text" name="plugin_copyright" value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginCopyright} " size="30" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_copyright.help}</span>
 								</div>  
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_provider_url"  value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProviderUrl}" /> 
+									<input class="form-control" type="text" name="plugin_provider_url"  value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProviderUrl}" /> 
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_provider_url.help}</span>
 								</div>              
 							</div>
 
