--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -26,13 +26,15 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
 								<div class="col-md-9">
 									<input class="form-control input-md" type="text" name="feature_title" value="${feature.featureTitle}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_admin_feature_title.help}</span>
 								</div>
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureDescription} : </label>                        
 								<div class="col-md-9">                                                                                       
-									 <input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription}" />                               
+									<input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription}" />                               
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_admin_feature_description.help}</span>
 								</div>    
 							</div>
 
@@ -40,7 +42,8 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} :                            
 								</label>                               
 								<div class="col-md-9">                                                              	                              
-									 <input class="form-control input-md" type="text" name="feature_name" value="${feature.featureName}" /> 				                                                                        
+									 <input class="form-control input-md" type="text" name="feature_name" value="${feature.featureName}" />
+									 <span class="help-block">#i18n{pluginwizard.pluginwizard_admin_feature_name.help}</span>
 								</div>         	  				                     
 							</div>   
 
