--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -23,14 +23,16 @@
 							 <div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
 								<div class="col-md-9">    
-									<input class="form-control input-md autocorrect" type="text" name="business_class" value="" size="30" data-pattern="${business_class_name_pattern}" />      
+									<input class="form-control input-md autocorrect" type="text" name="business_class" value="" size="30" data-pattern="${business_class_name_pattern}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_business_class.help}</span>    
 								</div>  
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} *:</label>      
-								<div class="col-md-9"> 
-									 <input class="form-control input-md autocorrect" type="text" name="business_table_name" value="${plugin_model.pluginName?replace("-", "_")}_" size="30" data-pattern="${business_class_tab_name_pattern}" />      
+								<div class="col-md-9">
+									<input class="form-control input-md autocorrect" type="text" name="business_table_name" value="${plugin_model.pluginName?replace("-", "_")}_" size="30" data-pattern="${business_class_tab_name_pattern}" /> 
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_business_class_table.help}</span> 
 								</div>  
 							</div>
 			 
