--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -48,14 +48,16 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
 								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_description" value="${plugin_model.pluginDescription!''}" />
+									<input class="form-control input-md" type="text" name="plugin_description" value="${plugin_model.pluginDescription!''}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_description.help}</span>
 								</div>
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
 								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_provider" value="${plugin_model.pluginProvider!''}" />
+									<input class="form-control input-md" type="text" name="plugin_provider" value="${plugin_model.pluginProvider!''}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_provider.help}</span>
 								</div>
 							</div>
 
@@ -63,20 +65,23 @@
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
 								<div class="col-md-9"> 
 									<input class="form-control input-md" type="text" name="plugin_version"  value="${plugin_model.pluginVersion!''}" size="30" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_version.help}</span>
 								</div>                                                                              
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
 								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_copyright" value="${plugin_model.pluginCopyright!''}" size="30" />
+									<input class="form-control input-md" type="text" name="plugin_copyright" value="${plugin_model.pluginCopyright!''}" size="30" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_copyright.help}</span>
 								</div>  
 							</div>
 
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
-								<div class="col-md-9"> 
-									 <input class="form-control input-md autocorrect" type="text" name="plugin_provider_url"  value="${plugin_model.pluginProviderUrl!''}" data-pattern="${plugin_provider_url_pattern}" /> 
+								<div class="col-md-9">
+									<input class="form-control input-md autocorrect" type="text" name="plugin_provider_url"  value="${plugin_model.pluginProviderUrl!''}" data-pattern="${plugin_provider_url_pattern}" />
+									<span class="help-block">#i18n{pluginwizard.pluginwizard_plugin_provider_url.help}</span>
 								</div>              
 							</div>
 
