PLUGINWIZARD-147 fix issues with Lutece 7 due to @ComboNameWith Params macro

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -134,7 +134,7 @@
                                 		<#assign defaultItemValue=item.code />
                                 	</#if>
                                 </#list>
-                                <@comboWithParams name="scheme" items=combo_schemes default_value=defaultItemValue additionalParameters='class="input-lg"' />       
+                                <@select name="scheme" default_value=defaultItemValue class='input-lg' items=combo_schemes />       
                             </div>
                             <button class="btn btn-success btn-lg" type="submit" >
                                 <i class="glyphicon glyphicon-download-alt">  </i>
