--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
@@ -33,7 +33,7 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeType} * :</label>      
 								<div class="col-md-9">          
-									<@comboWithParams name="attribute_type_id" default_value="${attribute.attributeTypeId}" additionalParameters="class=\"form-control input-md\"" items=combo_attribute_type />      
+									<@select name="attribute_type_id" default_value="${attribute.attributeTypeId}" class='form-control input-md' items=combo_attribute_type />      
 								</div>     
 							</div>
 
