--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -73,7 +73,7 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
 								<div class="col-md-9">
-									 <input class="form-control" type="text" name="plugin_provider_url"  value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProviderUrl}" /> 
+									 <input class="form-control autocorrect" type="text" name="plugin_provider_url"  value="" placeholder="#i18n{pluginwizard.pluginwizard_create_plugin_description.placeholderPluginProviderUrl}" data-pattern="${plugin_provider_url_pattern}" /> 
 								</div>              
 							</div>
 
