--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -76,7 +76,7 @@
 							<div class="form-group">
 								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
 								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_provider_url"  value="${plugin_model.pluginProviderUrl!''}"  /> 
+									 <input class="form-control input-md autocorrect" type="text" name="plugin_provider_url"  value="${plugin_model.pluginProviderUrl!''}" data-pattern="${plugin_provider_url_pattern}" /> 
 								</div>              
 							</div>
 
